Updated block height on home page to fix text truncation n mobile

--- a/source/assets/stylesheets/modules/_pages.scss
+++ b/source/assets/stylesheets/modules/_pages.scss
@@ -73,7 +73,7 @@
 .feature {
   padding: 20px 18px;
   overflow: hidden;
-  height: 8.2em;
+  height: 8.294em;
   background: $feature-background;
   .title {
     font-family: $font-semibold;
@@ -88,7 +88,7 @@
     color: $gray-darkest;
   }
   @include mq($large) {  
-    height: 8.2em;
+    height: 8.295em;
   }
 }
 
